Improved Notebook menu display in the WISE5 default theme on small screens (converts to a fixed bottom bar)

--- a/src/main/webapp/wise5/vle/themes/default/style/modules/_node.scss
+++ b/src/main/webapp/wise5/vle/themes/default/style/modules/_node.scss
@@ -168,7 +168,15 @@ $input-action-vertical-offset-richtext: -7px;
 }
 
 .node-sidebar-active {
-    margin-right: ($toolbar-height + 16);
+    @media only screen and (min-width: $layout-breakpoint-xs) {
+        margin-right: ($toolbar-height + 16);
+    }
+}
+
+.node-sidebar-visible {
+    @media only screen and (max-width: $layout-breakpoint-xs - 1) {
+        margin-bottom: $wise-toolbar-height;
+    }
 }
 
 .node-sidebar {
@@ -184,4 +192,15 @@ $input-action-vertical-offset-richtext: -7px;
     background-color: #ffffff;
     padding: 8px 0;
     border-radius: $button-border-radius;
+
+    @media only screen and (max-width: $layout-breakpoint-xs - 1) {
+        right: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        border-radius: 0;
+        padding: 0;
+        min-height: 0;
+        height: $wise-toolbar-height;
+    }
 }
